# DSP-Trading

./: .gitignore  GATE_2.7_FINAL_VERDICT.md  IMPLEMENTATION_PLAN_SLEEVE_IM.md  README.md  TODO_2026_01_10.md  pyproject.toml  requirements.txt
config/: dsp100k.yaml  dsp100k_etf_dual_momentum.yaml  dsp100k_live.yaml  sleeve_orb.yaml  success_criteria.yaml
config/universes/: sleeve_a_universe.yaml
docs/: BASELINE_B_vs_C_COMPARISON.md  DOWNLOADED_DATA_MARKET.md  GATE_0_REPORT.md  GATE_1_REPORT.md  GATE_1_SPEC.md  GATE_2.7_PLAN.md  GATE_2_REPORT.md  GATE_2_SPEC.md  NN_OBJECTIVE.md  ORB_FINAL_VERDICT.md  PLAN_DQN.md  POST_BACKFILL_CHECKLIST.md  PRESENTATION_BASELINE_B.md  PRESENTATION_ORB_MINIMAL.md  SLEEVE_C_PAPER_TRADING_RUNBOOK.md  SLEEVE_KILL_TEST_SUMMARY.md  SLEEVE_NN_PROPOSAL.md  SLEEVE_ORB_IMPLEMENTATION_STATUS.md  SLEEVE_ORB_KILL_TEST_RESULTS.md  SLEEVE_ORB_MINIMAL_SPEC.md  SLEEVE_TSMOM_EXTENDED_SPEC.md  SLEEVE_TSMOM_KILL_TEST_RESULTS.md  SLEEVE_TSMOM_MINIMAL_SPEC.md  SLEEVE_TSMOM_PRESENTATION.md  SLEEVE_VRP_ERP_SPEC.md  SLEEVE_VRP_ML_ENHANCEMENT.md  SLEEVE_VRP_PRESENTATION.md  SPEC_BASELINE_B.md  SPEC_BASELINE_C.md  SPEC_DQN.md  SPEC_DSP100K_CONTROL_UI.md  SPEC_SLEEVE_CARRY.md  SPEC_SLEEVE_C_TAIL_HEDGE.md  SPEC_VOL_TARGET_OVERLAY.md  SPEC_VRP.md  SPEC_VRP_CALENDAR_SPREAD.md  SPEC_VRP_FACTOR_SPEC.md  SPEC_VRP_GATED_NN.md  SPEC_VRP_REGIME_GATE.md  TRADING_STRATEGY_EDUCATION.md  (+15 more)
results/: baseline_evaluation.json  baseline_evaluation_full.json
scripts/: daily_digest.py  download_vx_futures_cboe.py  fetch_bond_etf_data.py  fetch_carry_rates_fred.py  panic_flatten_sleeve.py  sleeve_c_daily_monitor.py  sleeve_c_place_order.py  vrp_cs_daily_monitor.py  vrp_cs_trade.py  vrp_data_downloader.py  vrp_erp_daily_monitor.py  vrp_erp_trade.py
scripts/dqn/: __init__.py  (+9 more)
sweep_results/: di15_fixed_devtest_eval.json  di15_fixed_v2_val_eval.json  di15_fixed_v3_devtest_eval.json  di15_fixed_v3_devtest_eval_50ep.json  di15_fixed_v3_val_eval.json  di15_fixed_v3_val_eval_50ep.json  di15_fixed_val_eval.json  di60_v2_dev_eval_all.json  di60_v2_val_eval_all.json  zero_cost_baseline_eval.json
tests/: __init__.py
(+180 files in other folders)
